# CORAL-v3

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  PERF_FIX_2026_04_19.md  PHASE3A_CHANGES.md  README.md  V3_CODEBASE_AUDIT.md  pyproject.toml  requirements.txt
configs/: base.yaml  phase1.yaml  phase1_corrected.yaml  phase1_full_eval.yaml  phase1_greedy_eval.yaml  phase3a_control_warmstart.yaml  phase3a_crystal_warmstart.yaml  phase3b_moe_codebook.yaml  phase3c_greedy_eval.yaml  phase3c_moe_lb_specialization.yaml
coral/data/: README.md  build_sudoku_dataset.py  common.py  puzzle_dataset.py
coral/models/: __init__.py  columnar.py  common.py  coral_base.py  coral_v3.py  crystallization.py  layers.py  prediction.py  reasoning_module.py  sparse_embedding.py  transformer_block.py
coral/training/: act.py  adam_atan2.py  losses.py  scheduler.py
docs/: CORAL_Session_Handoff_2026-04-25-EOD.md  CORAL_Session_Handoff_2026-04-25_EOD.md  CORAL_v3_ARC_Adapter_Design.md  CORAL_v3_Claude_Code_Build_Plan.md  CORAL_v3_Handoff_Phase1_3.md  CORAL_v3_Implementation_Plan.md  CORAL_v3_Phase3b_MoE_Codebook_Spec.md  HRM_Codebase_Analysis.md  dataset_reproducibility.md  eval_slowness_diagnosis.md
scripts/: plot_precision_dynamics.py  smoke_test.py  smoke_test_compile_fix.py  train.py  verify_canonical_dataset.py  verify_phase2_phase3.py
tests/: test_act.py  test_columnar.py  test_coral_base.py  test_crystallization.py  test_dataset_determinism.py  test_integration.py  test_layers.py  test_prediction.py  test_puzzle_dataset_streaming.py  test_warmstart_remap.py
